Move tacvm to worker and build two js/wasm pairs

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </script>
 </head>
 <body>
-    <script src="online_tac_vm.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
