--- a/static/index.html
+++ b/static/index.html
@@ -25,6 +25,6 @@
     </script>
 </head>
 <body>
-    <script src="online_tac_vm.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
